# robocide

./: .gitignore  CMakeLists.txt
src/: eval.c  eval.h  piece.c  pos.c  pos.h  search.c  search.h  uci.c
