cmake_minimum_required(VERSION 3.6)
project(src)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/attacks.c
        src/attacks.h
        src/bb.c
        src/bb.h
        src/bitbase.c
        src/bitbase.h
        src/bound.c
        src/bound.h
        src/colour.c
        src/colour.h
        src/depth.c
        src/depth.h
        src/eval.c
        src/eval.h
        src/fen.c
        src/fen.h
        src/file.c
        src/file.h
        src/history.c
        src/history.h
        src/htable.c
        src/htable.h
        src/killers.c
        src/killers.h
        src/magicmoves.c
        src/magicmoves.h
        src/move.c
        src/move.h
        src/moves.c
        src/moves.h
        src/perft.c
        src/perft.h
        src/piece.c
        src/piece.h
        src/pos.c
        src/pos.h
        src/rank.c
        src/rank.h
        src/robocide.c
        src/robocide.h
        src/score.c
        src/score.h
        src/scoredmove.c
        src/scoredmove.h
        src/search.c
        src/search.h
        src/see.c
        src/see.h
        src/square.c
        src/square.h
        src/thread.c
        src/thread.h
        src/time.c
        src/time.h
        src/tt.c
        src/tt.h
        src/tune.h
        src/uci.c
        src/uci.h
        src/util.c
        src/util.h)

add_executable(src ${SOURCE_FILES})